@@ -65,7 +65,7 @@ do
     db_get cdrom-detect/manual_config
 
     modules=none
-    for i in `ls -1 /lib/modules/*/kernel/drivers/cdrom/ | sed -e 's/.o$//'`
+    for i in `ls -1 /lib/modules/*/kernel/drivers/cdrom/ | sed -re 's/.k?o$//'`
     do
 	modules="$modules, $i"
     done
